# tmf_vibes

./: .aider.chat.history.md  .aider.input.history  CONVENTIONS.md  Makefile  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
docs/: TMF620_Product_Catalog_userguide.md  TMF622_Product_Ordering_userguide.md  TMF632_Party_userguide.md  TMF637_Product_Inventory_userguide.md  TMF641-ServiceOrdering-v5.0.0.md  TMF648-Quote-v5.0.0.oas.yaml  TMF648_Quote-v5.0.0.md  TMF651-Agreement-v5.0.0.oas.yaml  TMF651_Agreement-v5.0.0.md  TMF673-GeographicAddress-v5.0.0.oas.yaml  TMF673_Geographic_Address-v5.0.0.md  TMF678_Customer_Bill_userguide.md  TMF679_ProductOfferingQualification_v5.0.0.md
some_legacy_platform/: README.md  pyproject.toml  todo.md
some_legacy_platform/data/: offering_1.json  offering_10.json  offering_2.json  offering_3.json  offering_4.json  offering_5.json  offering_6.json  offering_7.json  offering_8.json  offering_9.json
some_legacy_platform/src/some_legacy_platform/: __init__.py  data_loader.py  main.py  models.py
some_legacy_platform/tests/: test_data_loader.py  test_main_api.py
src/tmf_vibes/: __init__.py
